--- a/UiPlus/Properties/Resources.resx
+++ b/UiPlus/Properties/Resources.resx
@@ -337,6 +337,9 @@
   <data name="UiPlus_Modify_Graphics_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UiPlus-Modify-Graphics-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="UiPlus_Modify_Image_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\UiPlus-Modify-Image-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="UiPlus_Modify_ModChart_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UiPlus-Modify-ModChart-01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
